Fix loading icon on mobile

--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -12,3 +12,10 @@
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 }
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 1024px) {
+	.loader {
+		width: 30%;
+	}
+}
